<resources>
    <string name="app_name">FinSera</string>
    <string name="transfer_antarbank">Transfer Antarbank</string>
    <string name="daftar_penerima">Daftar penerima ke daftar tersimpan agar transaksi ke orang terdekat lebih mudah</string>
    <string name="belum_ada_daftar_tersimpan">Belum ada daftar tersimpan</string>
    <string name="cari_daftar_tersimpan">Cari Daftar Tersimpan</string>
    <string name="input_baru">Input Baru</string>
    <string name="daftar_tersimpan">Daftar Tersimpan</string>
    <string name="nama">Nama</string>
    <string name="bank_tujuan">Bank Tujuan</string>
    <string name="nomor_rekening_tujuan">Nomor Rekening Tujuan</string>
    <string name="nominal">Nominal</string>
    <string name="catatan">Catatan</string>
    <string name="simpan_ke_daftar_tersimpan">Simpan ke daftar tersimpan</string>
    <string name="konfirmasi_transaksi">Konfirmasi Transaksi</string>
    <string name="rekening_tujuan">Rekening Tujuan</string>
    <string name="pin">PIN</string>
    <string name="masukkan_pin_pembayaran">Masukkan PIN Pembayaran</string>
    <string name="e_wallet">E-Wallet</string>
    <string name="tambah_penerima_ke_daftar_tersimpan">Tambah penerima ke daftar tersimpan agar transaksi ke orang terdekat lebih mudah</string>
    <string name="empty_state_image">Empty List Image</string>
    <string name="btn_back">Kembali</string>
    <string name="logo_gopay">logo gopay</string>
    <string name="gopay">GoPay</string>
    <string name="logo_dana">logo dana</string>
    <string name="dana">Dana</string>
    <string name="logo_ovo">logo ovo</string>
    <string name="ovo">OVO</string>
    <string name="logo_shopeepay">logo shopeepay</string>
    <string name="shopeepay">ShopeePay</string>
    <string name="nomor_e_wallet">Nomor E-Wallet</string>
    <string name="nomor_e_wallet_user">081234567890</string>
    <string name="lanjut">Lanjut</string>
    <string name="logo_paypal">logo paypal</string>
    <string name="paypal">Paypal</string>
    <string name="balance_information">Informasi Saldo</string>
    <string name="account_balance_label">Saldo Rekening</string>
    <string name="back">Kembali</string>
    <string name="rp_10_000_000">Rp 10.000.000</string>
    <string name="account_number_value">1234 567 897 890</string>
    <string name="copy_account_number">Salin nomor rekening</string>
    <string name="transaction_mutation_label">Mutasi Transaksi</string>
    <string name="saved_history_label">Riwayat Tersimpan</string>
    <string name="mutation_filter_label">Filter Mutasi</string>
    <string name="download">Download</string>
    <string name="next">Lanjut</string>
    <string name="mutation_empty_label">Oops! Riwayat Mutasi Kosong</string>
    <string name="account_number_label">Nomor Rekening</string>
    <string name="period_label">Periode</string>
    <string name="today">Hari Ini</string>
    <string name="week">7 Hari</string>
    <string name="month">1 Bulan</string>
    <string name="period_of_time_label">Jangka Waktu</string>
    <string name="start_date_label">Tanggal Awal</string>
    <string name="end_date_label">Tanggal Akhir</string>
    <string name="start_date">MM-DD-YYYY</string>
    <string name="end_date">MM-DD-YYYY</string>
    <string name="date_example">12 Juli 2024</string>
    <string name="description_example">Transfer ke Rekening Admin</string>
    <string name="amount_example">+ Rp 500.000</string>
    <string name="amount_placholder">Rp 300.000</string>
    <string name="datetime_example">09.24 WIB</string>
    <string name="tv_header_login_screen">Login</string>
    <string name="tv_hint_username_login">Username</string>
    <string name="tv_hint_password_login">Password</string>
    <string name="tv_btn_forget_password">Lupa Password ?</string>
    <string name="tv_btn_login">Login</string>
    <string name="tv_topbg_hello_placeholder">Halo,</string>
    <string name="tv_topbg_account_name">Putra Ganda</string>
    <string name="tv_saldo_card_rekening_home">Rp ********</string>
    <string name="tv_rekening_placeholder">1234 567 897 890</string>
    <string name="tv_nama_nasabah_placeholder">Putra Ganda Dewata</string>
    <string name="tv_placeholder_cari_fitur">Cari Fitur</string>
    <string name="tv_home_icon_transfersesama">Transfer\nsesama</string>
    <string name="tv_home_icon_transferantarbank">Transfer\nAntar Bank</string>
    <string name="tv_home_icon_virtualaccount">Virtual\nAccount</string>
    <string name="tv_home_icon_ewallet">E-Wallet</string>
    <string name="tv_home_icon_infosaldo">Info\nSaldo</string>
    <string name="choose_date">Pilih Tanggal</string>
    <string name="tv_welcome_back_pin_login_screen">Selamat Datang Kembali</string>
    <string name="tv_btn_pin_screen_1">1</string>
    <string name="tv_btn_pin_screen_2">2</string>
    <string name="tv_ganti_akun">Ganti Akun</string>
    <string name="tv_btn_pin_screen_3">3</string>
    <string name="tv_btn_pin_screen_4">4</string>
    <string name="tv_btn_pin_screen_5">5</string>
    <string name="tv_btn_pin_screen_6">6</string>
    <string name="tv_btn_pin_screen_7">7</string>
    <string name="tv_btn_pin_screen_8">8</string>
    <string name="tv_btn_pin_screen_9">9</string>
    <string name="tv_btn_pin_screen_0">0</string>
    <string name="tv_talkback_lihat_saldo">Lihat Saldo Rekening Anda</string>
    <string name="tv_talkback_salin_norek">Salin Nomor Rekening Anda</string>
    <string name="tv_talkback_notifikasi_btn">Notifikasi</string>
    <string name="tv_talkback_logout_btn">Logout dari Akun Finsera Anda</string>
    <string name="tv_talkback_tf_sesama_btn_home">Transfer Sesama</string>
    <string name="tv_talkback_tf_antarbank_btn_home">Transfer Antar Bank</string>
    <string name="tv_talkback_infosaldo_btn_home">Info Saldo Anda</string>
    <string name="tv_talkback_ewallet_btn_home">Transaksi E-Wallet</string>
    <string name="tv_talkback_va_btn_home">Transaksi Virtual Account</string>
    <string name="tv_talkback_password_login">Kolom Password</string>
    <string name="tv_talkback_username_login">Kolom Username</string>
    <string name="tv_talkback_password_toggle_login">Lihat Password</string>
    <string name="tv_navbar_title_beranda">Beranda</string>
    <string name="tv_navbar_title_mutasi">Mutasi</string>
    <string name="tv_navbar_title_qris">QRIS</string>
    <string name="tv_navbar_title_favorit">Favorit</string>
    <string name="tv_navbar_title_akun">Akun</string>
    <string name="desc_pilih_bank">pilih bank tujuan di bawah</string>
    <string name="input_rekening">input rekening</string>
    <string name="desc_input_nominal">input nominal anda di bawah</string>
    <string name="input_catatan">input catatan</string>
    <string name="desc_simpan_ke_daftar_tersimpan">Tekan untuk menyimpan ke daftar tersimpan</string>
    <string name="desc_input_pin">input pin anda di bawah</string>
    <string name="input_baru_klik_untuk_transfer">input baru klik untuk transfer</string>
    <string name="belum_ada_daftar_tersimpan_empty">Belum ada daftar tersimpan tambah penerima ke daftar tersimpan agar transaksi ke orang terdekat lebih mudah</string>
    <string name="transfer_sesama_bank">Transfer Sesama Bank</string>
    <string name="Pilih_Bank">Pilih Bank</string>
    <string name="trouble">Oops! Sepertinya ada masalah</string>
    <string name="network_error_message">Pastikan perangkat anda terhubung pada jaringan. Tunggu beberapa saat dan coba lagi buka aplikasi.</string>
    <string name="failed_transfer">oops, sepertinya ada masalah pastikan perangkat anda terhubung pada jaringan. tunggu beberapa saat dan coba lagi buka aplikasi</string>
    <string name="transfer_virtual_account">Transfer Virtual Account</string>
    <string name="nomor_va">Nomor Virtual Account</string>
    <string name="desc_input_nomor_va">input nomor virtual account di bawah</string>
    <string name="nomor_VA">Nomor Virtual Account</string>
    <string name="virtual_account">Virtual Account</string>
    <string name="rama">Rama</string>
    <string name="ubah_mpin">Ubah MPIN</string>
    <string name="password_id">Password ID</string>
    <string name="password">Password</string>
    <string name="input_password">input password</string>
    <string name="pin_baru">PIN Baru</string>
    <string name="konfitmasi_pin_baru">Konfitmasi PIN Baru</string>
    <string name="konfirmasi">Konfirmasi</string>
    <string name="kembali_ke_aplikasi">Kembali ke Aplikasi</string>
    <string name="silakan_login_dengan_pin_yang_baru">Silakan login dengan PIN yang baru!</string>
    <string name="pin_berhasil_diubah">PIN Berhasil Diubah</string>
    <string name="transaksi_berhasil">Transaksi Berhasil</string>
    <string name="tanggal">Tanggal</string>
    <string name="biaya_admin">Biaya Admin</string>
    <string name="nomor_transaksi">Nomor Transaksi</string>
    <string name="nama_penerima">Nama Penerima</string>
    <string name="share">Share</string>
    <string name="kembali_ke_menu">Kembali ke Menu</string>
    <string name="example_date">08/07/2024 13.00</string>
    <string name="example_nominal">Rp.1.500.000,00</string>
    <string name="example_biaya_admin">Rp.2.500</string>
    <string name="example_nomor_transaksi">09872351242586</string>
    <string name="example_bank">Bank BRI</string>
    <string name="example_nama_penerima">Budhi Darma</string>
    <string name="example_rekening_tujuan">098765443312324</string>
    <string name="example_catatan">Bayar Hutang</string>
    <string name="nomor_handphone">Nomor Handphone</string>
    <string name="example_nomor_handphone">+6286790222789</string>
    <string name="example_nama">RAMADHAN ADI</string>
    <string name="email">Email</string>
    <string name="example_email">ramadhanadi@gmail.com</string>
    <string name="gender">Gender</string>
    <string name="example_gender">Laki-laki</string>
    <string name="perangkat_tertaut">Perangkat Tertaut</string>
    <string name="example_perangkat">Samsung J2 Prime</string>
    <string name="kelola_akun">KELOLA AKUN</string>
    <string name="preferensi">PREFERENSI</string>
    <string name="privasi">PRIVASI</string>
    <string name="syarat_dan_ketentuan">Syarat dan Ketentuan</string>
    <string name="pusat_bantuan">Pusat Bantuan</string>
    <string name="logout">Logout</string>
    <string name="akun">Akun</string>
    <string name="notifikasi">Notifikasi</string>
    <string name="accessibilitas">Accessibilitas</string>
    <string name="ramadhan_adi">Ramadhan Adi</string>
    <string name="tv_title_isi_e_wallet">Isi E-Wallet</string>
    <string name="tv_no_handphone_atau_nama">Masukkan no.handphone/nama</string>
    <string name="desc_input_no_hp_atau_nama">Masukkan nomor handphone atau nama di bawah</string>
    <string name="desc_empty_list">Belum ada daftar tersimpan. tambah penerima ke daftar tersimpan agar transaksi ke orang terdekat lebih mudah</string>
    <string name="no_handphone_nama">No. Handphone / Nama</string>
    <string name="input_nomor_handphone_atau_nama">Input Nomor Handphone atau Nama</string>
    <string name="nama_pengguna">Nama Pengguna</string>
    <string name="username">Putra Ganda Dewata</string>
    <string name="saldo_disembunyikan">Saldo Disembunyikan</string>
    <string name="balance_description">Saldo rekening anda adalah %s</string>
    <string name="btn_download_mutasi">Unduh Mutasi Transaksi</string>
    <string name="pilih_tanggal_awal">Pilih Tanggal Awal</string>
    <string name="pilih_tanggal_akhir">Pilih Tanggal Akhir</string>
    <string name="pilih_periode_di_bawah">Pilih Periode di Bawah</string>
    <string name="masukkan_jangka_waktu_di_bawah">Masukkan Jangka Waktu di Bawah</string>
    <string name="screen_beranda">Halaman Beranda</string>
    <string name="screen_login">Halaman Login</string>
    <string name="screen_lupa_password">Halaman Lupa Password</string>
    <string name="screen_isi_ewallet">Isi E-Wallet yang Anda Inginkan</string>
</resources>