<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="20dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.ubahmpin.UbahMPINFragment">

    <RelativeLayout
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/topmenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/back"
            android:src="@drawable/ic_back_button"
            android:layout_centerVertical="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ubah_mpin"
            android:contentDescription="@string/ubah_mpin"
            android:textSize="24sp"
            android:textColor="@android:color/black"
            android:layout_centerInParent="true"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/layoutpassword"
        app:layout_constraintTop_toBottomOf="@id/topmenu"
        android:layout_marginTop="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/password_id"
            android:text="@string/password_id"
            android:textSize="16sp"
            android:textColor="@color/neutral_09" />
        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/edit_text_background_neutral5"
            android:gravity="center_vertical"
            android:paddingHorizontal="16dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/input_password"
            android:hint="@string/password"
            android:singleLine="true" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/layoutPINBaru"
        app:layout_constraintTop_toBottomOf="@id/layoutpassword"
        android:layout_marginTop="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/pin_baru"
            android:text="@string/pin_baru"
            android:textSize="16sp"
            android:textColor="@color/neutral_09" />
        <EditText
            android:id="@+id/pinbaruEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/edit_text_background_neutral5"
            android:gravity="center_vertical"
            android:paddingHorizontal="16dp"
            android:layout_marginTop="10dp"
            android:hint="@string/pin"
            android:singleLine="true" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/layoutkonfirmasipinbaru"
        app:layout_constraintTop_toBottomOf="@id/layoutPINBaru"
        android:layout_marginTop="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/konfitmasi_pin_baru"
            android:text="@string/konfitmasi_pin_baru"
            android:textSize="16sp"
            android:textColor="@color/neutral_09" />
        <EditText
            android:id="@+id/konfirmasipinbaruEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/edit_text_background_neutral5"
            android:gravity="center_vertical"
            android:paddingHorizontal="16dp"
            android:layout_marginTop="10dp"
            android:hint="@string/pin"
            android:singleLine="true" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_konfirmasi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background_primary"
        app:backgroundTint="@color/primary_blue"
        android:contentDescription="@string/konfirmasi"
        android:text="@string/konfirmasi"
        android:textSize="20sp"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>