<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/cl_mutasi_filter"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_period_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/calibri_regular"
        android:text="@string/period_label"
        android:textColor="@color/neutral_09"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_today"
        android:contentDescription="@string/pilih_periode_di_bawah"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_today"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/today"
        android:textAllCaps="false"
        android:textColor="@color/primary_blue"
        android:textSize="@dimen/_12ssp"
        app:cornerRadius="8dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="14dp"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_period_label"
        app:layout_constraintEnd_toStartOf="@id/btn_week"
        app:strokeColor="@color/primary_blue" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_week"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/week"
        android:textColor="@color/primary_blue"
        android:textSize="@dimen/_12ssp"
        android:textAllCaps="false"
        app:cornerRadius="8dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toStartOf="@id/btn_month"
        app:layout_constraintStart_toEndOf="@id/btn_today"
        app:layout_constraintTop_toTopOf="@id/btn_today"
        app:layout_constraintBottom_toBottomOf="@id/btn_today"
        app:strokeColor="@color/primary_blue" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_month"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/month"
        android:textAllCaps="false"
        android:textColor="@color/primary_blue"
        android:textSize="@dimen/_12ssp"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_week"
        app:layout_constraintTop_toTopOf="@id/btn_week"
        app:layout_constraintBottom_toBottomOf="@id/btn_week"
        app:strokeColor="@color/primary_blue" />


    <TextView
        android:id="@+id/tv_period_of_time_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/calibri_regular"
        android:text="@string/period_of_time_label"
        android:textColor="@color/neutral_09"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_today"
        android:contentDescription="@string/masukkan_jangka_waktu_di_bawah"/>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_start_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginEnd="60dp"
        app:layout_constraintTop_toBottomOf="@id/tv_period_of_time_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/cle_end_date"
        app:layout_constraintHorizontal_chainStyle="packed"
        android:contentDescription="@string/pilih_tanggal_awal">

        <TextView
            android:id="@+id/tv_start_date_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/calibri_regular"
            android:layout_marginStart="5dp"
            android:text="@string/start_date_label"
            android:textColor="@color/neutral_03"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintStart_toEndOf="@id/ib_start_date"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/tv_start_date_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/calibri_regular"
            android:text="@string/start_date"
            android:textColor="@color/neutral_09"
            android:textSize="@dimen/_14ssp"
            android:layout_marginStart="5dp"
            app:layout_constraintStart_toEndOf="@id/ib_start_date"
            app:layout_constraintTop_toBottomOf="@id/tv_start_date_label" />

        <ImageButton
            android:id="@+id/ib_start_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/ic_calendar"
            android:importantForAccessibility="no"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/tv_start_date_value"
            app:layout_constraintTop_toTopOf="@id/tv_start_date_label" />
    </androidx.constraintlayout.widget.ConstraintLayout>

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="wrap_content"
    android:id="@+id/cle_end_date"
    app:layout_constraintTop_toTopOf="@id/cl_start_date"
    app:layout_constraintStart_toEndOf="@id/cl_start_date"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toBottomOf="@id/cl_start_date"
    android:layout_height="wrap_content"
    android:contentDescription="@string/pilih_tanggal_akhir">

    <TextView
        android:id="@+id/tv_end_date_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/calibri_regular"
        android:text="@string/end_date_label"
        android:textColor="@color/neutral_03"
        android:layout_marginStart="5dp"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintStart_toEndOf="@id/ib_end_date"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/ib_end_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/ic_calendar"
        android:importantForAccessibility="no"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/tv_end_date_value"
        app:layout_constraintTop_toTopOf="@id/tv_end_date_label" />

    <TextView
        android:id="@+id/tv_end_date_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/calibri_regular"
        android:text="@string/end_date"
        android:layout_marginStart="5dp"
        android:textColor="@color/neutral_09"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintStart_toEndOf="@id/ib_end_date"
        app:layout_constraintTop_toBottomOf="@id/tv_end_date_label" />
</androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_next"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_20sdp"
        android:backgroundTint="@color/primary_blue"
        android:padding="16dp"
        android:text="@string/next"
        android:textColor="@color/neutral_01"
        android:textSize="@dimen/_16ssp"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>