<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_date"
        android:fontFamily="@font/calibri_regular"
        android:text="@string/date_example"
        android:textSize="@dimen/body_text1"
        android:textColor="@color/neutral_09"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_description"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/calibri_regular"
        android:text="@string/description_example"
        android:textSize="@dimen/body_text1"
        android:maxEms="9"
        android:textColor="@color/neutral_09"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_date"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_amount"
        android:fontFamily="@font/calibri_regular"
        android:text="@string/amount_example"
        android:textSize="@dimen/body_text1"
        android:textColor="@color/neutral_09"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_description"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_date_time"
        android:fontFamily="@font/calibri_regular"
        android:text="@string/datetime_example"
        android:textSize="@dimen/body_text1"
        android:textColor="@color/neutral_09"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/tv_description"
        app:layout_constraintTop_toBottomOf="@id/tv_amount"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@color/neutral_03"
        app:layout_constraintTop_toBottomOf="@id/tv_date_time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>




</androidx.constraintlayout.widget.ConstraintLayout>